paragraph shift fixed

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,8 +17,7 @@ h1 {
 
 
  h6 {
-   font-size: 1.6rem;
-   width: 95%;
+   font-size: 1.1rem;
    margin: 0 auto;
  }
 
@@ -31,6 +30,8 @@ h1 {
         color: #fff;
         text-indent: 30px;
         line-height: 20px;
+  margin: 0 auto;
+
     }
     
  #welcome{
