--- a/sass/components/_Column.scss
+++ b/sass/components/_Column.scss
@@ -84,6 +84,8 @@ padding: 17px 20px;
 text-align: center;
 color: #fff;
 margin: 0 auto;
+max-width: 20%;
+margin-bottom: 3rem;
 
 }
 .link-item{
@@ -107,7 +109,7 @@ margin: 0 auto;
  align-items: center;
  justify-content: center;
  gap: .9rem;
- max-width: 15%;
+ max-width: 20%;
  margin: 0 auto;
 
 }
